# priority

./: .env  .gitignore  Cargo.toml
migrations/2025-08-04-121322_create_todos/: up.sql
migrations/2025-08-08-145625_add_creation_timestamp/: down.sql  up.sql
src/: cli.rs  db.rs  error.rs  main.rs  table.rs
src/db/: schema.rs
tests/: cli.rs
