[package]
name = "priority"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
diesel = { version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
tabled = "0.20.0"
thiserror = "2.0.12"
